apps/p3/service.yaml
apiVersion: v1
kind: Service

metadata:
  name: playground
  namespace: dev

spec:
  selector:
    app: playground

  ports:
    - port: 80
      targetPort: 8888
