apps/p3/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: playground
  namespace: dev

spec:
  ingressClassName: traefik

  rules:
    - host: playgroung.localhost
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: playground
                port:
                  number: 80
